--- a/Negotiation3/reports/compare.html
+++ b/Negotiation3/reports/compare.html
@@ -33,7 +33,7 @@
 			  padding:1rem 1rem 0.5rem 1rem;
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
-			  margin: 1rem 1rem;
+		  	  margin: 1.5rem 1.5rem;
 			  border-radius:1px;
 			  background-image: url("top-banner-3.png");
 			  background-repeat: no-repeat;
@@ -46,7 +46,7 @@
 			  padding:1rem 1rem;
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
-			  margin: 1rem 1rem;
+			  margin: 1.5rem 1.5rem;
 			  border-radius:1px;
 			  user-select:none;
 			  animation:fly-in-from-left .5s 1s ease both;
@@ -112,7 +112,7 @@
 	<div>
 		
 	<div style="font-size: 14px">
-		<table class="table table-bordered">
+		<table class="table table-bordered table-striped">
 			<thead>
 				<tr>
 					<th>Skill</th>
@@ -123,23 +123,23 @@
 			<tbody>
 				<tr>
 					<td>Creating value</td>
-					<td align="center" style="font-size: 16px">4</td>
-					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
+					<td align="center" style="font-size: 14px">4</td>
+					<td align="center" style="font-size: 14px"><strong>%@</strong></td>
 				</tr>
 				<tr>
 					<td>Asserting your interests</td>
-					<td align="center" style="font-size: 16px">4</td>
-					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
+					<td align="center" style="font-size: 14px">4</td>
+					<td align="center" style="font-size: 14px"><strong>%@</strong></td>
 				</tr>
 				<tr>
 					<td>Understanding other parties</td>
-					<td align="center" style="font-size: 16px">5</td>
-					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
+					<td align="center" style="font-size: 14px">5</td>
+					<td align="center" style="font-size: 14px"><strong>%@</strong></td>
 				</tr>
 				<tr>
 					<td>Getting the maximum</td>
-					<td align="center" style="font-size: 16px">3</td>
-					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
+					<td align="center" style="font-size: 14px">3</td>
+					<td align="center" style="font-size: 14px"><strong>%@</strong></td>
 				</tr>
 			</tbody>
 		</table>	
