--- a/Negotiation3/reports/overview.html
+++ b/Negotiation3/reports/overview.html
@@ -33,7 +33,7 @@
 	  padding:1rem 0rem;
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
-	  margin: 1rem 1.5rem;
+	  margin: 1.5rem 1.5rem;
 	  border-radius:1px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
@@ -97,7 +97,7 @@
     <section class="card">
 		<canvas id="canvas"></canvas>
 	</section>
-    <script src="Chart.js"></script>
+    <script src="ChartNew.js"></script>
 
 	<script>
 	var radarChartData = {
@@ -124,7 +124,7 @@
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
-			pointLabelFontSize : 11,
+			pointLabelFontSize : 12,
 			pointLabelFontColor : "gray",
 		    animationSteps: 100,
 		    scaleOverride: true,
