--- a/Negotiation3/reports/practices-performance.html
+++ b/Negotiation3/reports/practices-performance.html
@@ -23,10 +23,10 @@
 	  background-size:cover;
 	}
 	.topcard {
-	  padding:0.5rem 1rem;
+	  padding:0.5rem 0.5rem;
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
-	  margin: 1.5rem 1rem 1rem 1rem;
+	  margin: 1.5rem 1.5rem;
 	  border-radius:1px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
@@ -36,7 +36,7 @@
 	  padding:0.5rem 1rem;
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
-	  margin: 1rem 1rem;
+	  margin: 1.5rem 1.5rem;
 	  border-radius:1px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
@@ -137,7 +137,7 @@
 	<div class="owl-carousel" style="margin: 10px 0px 0px 0px;">
 
    		<div class="owl-item">
-			<section class="topcard">
+			<section class="card">
 				<p style="font-size: 14px">Step back and review your performance in your last negotiations. <strong>Negotiation 360&deg;</strong> has analyzed your experience across several dimensions. It will automatically update this information as you enter more Scorecards.</p>
 			</section>
 		</div>
@@ -177,7 +177,7 @@
 		</div>
 
    		<div class="owl-item">
-			<section class="topcard">
+			<section class="card">
 				<h1>Importance &amp; Satisfaction</h1> 
 				<h2 id="subtitle3"></h2>
 				<canvas id="canvas3" width="280" height="140"></canvas>
@@ -189,7 +189,7 @@
 		</div>
 
    		<div class="owl-item">
-			<section class="topcard">
+			<section class="card">
 				<p style="font-size: 14px">Finally <strong>Negotiation 360&deg;</strong> complies your performance on both the relational scale (asserting your interests versus understanding others) and the outcome scale (creating and claiming value). The baseline is your most current self-assessment profile, so you can compare how you did in particular cases relative to your general performance. </p>
 			</section>
 			<section class="card">
@@ -198,7 +198,7 @@
 		</div>
 
    		<div class="owl-item">
-			<section class="topcard">
+			<section class="card">
 				<h1>Creating Value</h1> 
 				<h2 id="subtitle4"></h2>
 				<canvas id="canvas4" width="280" height="140"></canvas>
@@ -219,7 +219,7 @@
 		</div>
 
    		<div class="owl-item">
-			<section class="topcard">
+			<section class="card">
 				<h1>Asserting Your Interests</h1> 
 				<h2 id="subtitle5"></h2>
 				<canvas id="canvas5" width="280" height="140"></canvas>
@@ -240,7 +240,7 @@
 		</div>
 		
    		<div class="owl-item">
-			<section class="topcard">
+			<section class="card">
 				<h1>Understanding Other Parties</h1> 
 				<h2 id="subtitle6"></h2>
 				<canvas id="canvas6" width="280" height="140"></canvas>
@@ -261,7 +261,7 @@
 		</div>
 		
    		<div class="owl-item">
-			<section class="topcard">
+			<section class="card">
 				<h1>Getting the Maximum</h1> 
 				<h2 id="subtitle7"></h2>
 				<canvas id="canvas7" width="280" height="140"></canvas>
