new icons and updated images

--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -117,21 +117,21 @@
 
 		<section class="card">
 			<div align="center">
-		        <img src="user_male4-32.png" width="36px" height="36px" class="img-circle">
+		        <img src="change_user-32@2x.png" width="44px" height="44px" class="img-circle">
 			</div>
 			<p style="font-size: 14px;"><strong>Negotiation 360&deg;</strong> has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile reflecting your basic negotiation style. It also explains fundamental tensions in negotiation that you must address in formulating strategy.</p>
 		</section>
 
 		<section class="card">
 			<div align="center">
-		        <img src="compass-32.png" width="36px" height="36px" class="img-circle">
+		        <img src="adventures-32@2x.png" width="44px" height="44px" class="img-circle">
 			</div>
 			<p style="font-size: 14px;">The <strong>Scorecard</strong> feature enables you to do an after-action-review of every negotiation you undertake, large or small. It enables you to draw the right lessons from your own on-going experience.</p>
 		</section>
 
 		<section class="card">
 			<div align="center">
-		        <img src="best-practices.png" width="36px" height="36px" class="img-circle">
+		        <img src="star-32@2x.png" width="44px" height="44px" class="img-circle">
 			</div>
 			<p style="font-size: 14px;">And then, preparing for your next negotiation, always consult the third feature, <strong>My best practices</strong>. It compiles what you've learned from prior experience so that you can continually enhance your strategic and interpersonal skills. Be sure to consult the <strong>Resources</strong> section, as well, that points you to other sources of valuable negotiation advice.</p>
 		</section>
