--- a/Negotiation3/reports/scorecard-profile.html
+++ b/Negotiation3/reports/scorecard-profile.html
@@ -144,7 +144,7 @@
 				<span data-icon="&#xe030;" style="font-size: 32px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-				<p>Take a moment to review your answers, plus your scorecard profile, and reflect more broadly about how this negotiation unfolded. When you're done, continue on to the next section.</p>
+				<p>Take a moment to review your answers, plus your scorecard profile, and reflect more broadly about how this negotiation unfolded. When you're done, tap Back above.</p>
 			</div>
 		</div>
 	</section>
