- updated images - be background on page view

--- a/Negotiation3/reports/overview.html
+++ b/Negotiation3/reports/overview.html
@@ -10,7 +10,7 @@
 	      background-position: top left;
 	      background-repeat: no-repeat;
 	      background-size: 100%;
-		    background-color: #efeff4
+		    background-color: #fff
 
 	  }
 
@@ -94,9 +94,7 @@
     
 </head>
 <body>
-    <section class="card">
-		<canvas id="canvas"></canvas>
-	</section>
+	<canvas id="canvas" width="400" height="275"></canvas>
     <script src="ChartNew.js"></script>
 
 	<script>
