--- a/Negotiation3/reports/practices-summary.html
+++ b/Negotiation3/reports/practices-summary.html
@@ -11,7 +11,7 @@
       background-position: top left;
       background-repeat: no-repeat;
       background-size: 100%;
-	    background-color: #efeff4
+	    background-color: #fff
   }
 .legend {
     width: 12em;
@@ -118,8 +118,7 @@ canvas-holder{
     
 </head>
 <body>
-		<section class="card">
-			<div class="container">
+			<div class="container" style="margin-top:15px; margin-left:10px">
 				<h1>Agreement Rate</h1> 
 						<div style="width: 150px; float: left">
 						<canvas id="canvas" width="160" height="150"></canvas>
@@ -127,7 +126,6 @@ canvas-holder{
 					<div style="margin-left: 140px" id="legend">
 				</div>
 			</div>
-		</section>
 	  <script src="jquery.js"></script>
 	    <script src="Chart.js"></script>
 
