--- a/Negotiation3/reports/scorecard-results.html
+++ b/Negotiation3/reports/scorecard-results.html
@@ -13,7 +13,7 @@
 		            background-position: top left;
 		            background-repeat: no-repeat;
 		            background-size: 100%;
-				    background-color: #efeff4
+				    background-color: #fff
 		        }
 					canvas{
 					  width: 100% !important;
@@ -92,7 +92,7 @@
 					h1 {
 					  font-size:2rem;
 					  font-weight:200;
-					  margin-top:11px;
+					  margin-top:1px;
 					}
 					  strong {
 					    font-weight:500;
@@ -100,7 +100,7 @@
 					  }
 					h2 {
 					  font-size:1.25rem;
-					  color:#ff9f33;
+					  color:#333;
 					  font-weight:400;
 					  margin-top:0px;
 					}
@@ -110,21 +110,21 @@
 <title></title>
 </head>
 	<body>
-		<section class="card">
-				<p style="font-size: 18px;line-height:1.14285714285714">Agreement Reached <strong>%@</strong></p>
-				<p style="font-size: 14px;line-height:1.14285714285714">%@</p>
+		<div class="container" style="margin-top:15px; margin-left:10px">
+				<h1>Agreement Reached <strong>%@</strong></h1>
+				<p>%@</p>
 			<div class="row">
-				<div class="col-xs-2"></div>
-				<div class="col-xs-4">
-					<div id="importance" data-dimension="80" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
-					<span style="font-size: 14px; font-size: 16px">Importance</span>
+				<div class="col-xs-1"></div>
+				<div class="col-xs-5">
+					<div id="importance" data-dimension="90" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
+					<h1> Importance</h1>
 				</div>
 				<div class="col-xs-4" style="font-size: 14px; line-height:1.14285714285714">
-					<div id="satisfaction" data-dimension="80" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
-					<span style="font-size: 16px; margin-left:5px">Satisfaction</span>
+					<div id="satisfaction" data-dimension="90" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
+					<h1>Satisfaction</h1>
 				</div>
 			</div><br>
-		</section>
+		</div>
 				
 		<script src="jquery.js" type="text/javascript"></script>
 		<script src="jquery.circliful.min.js"></script>
