--- a/Negotiation3/reports/practices-intro.html
+++ b/Negotiation3/reports/practices-intro.html
@@ -5,102 +5,127 @@
 	<link rel="stylesheet" href="css/style.css" />
     <style>
         .photo {
-            margin: 10px;
+			margin: 10px;
         }
         body {
-            background-position: top left;
-            background-repeat: no-repeat;
-            background-size: 100%;
-		    background-color: #efeff4
+			background-position: top left;
+			background-repeat: no-repeat;
+			background-size: 100%;
+			background-color: #efeff4
         }
 		canvas{
-		  width: 100% !important;
-	      max-width: 280px;
-	      height: 100% !important;
+			width: 100% !important;
+			max-width: 280px;
+			height: 100% !important;
 		}
 
 		header {
-		  position:absolute;
-		  z-index:0;
-		  top:0; left:0; right:0;
-		  height:10rem;
-		  transition:transform .5s, opacity .3s;
-		  background-size:cover;
+			position:absolute;
+			z-index:0;
+			top:0; left:0; right:0;
+			height:10rem;
+			transition:transform .5s, opacity .3s;
+			-webkit-transition:transform .5s, opacity .3s;
+			background-size:cover;
 		}
 
 		.topcard {
-		  padding:1rem 1rem 0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1.5rem 1.5rem;
-		  border-radius:1px;
-		  background-image: url("top-banner-11.png");
-		  background-repeat: no-repeat;
-   		  background-size: 100%;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
+			padding:1rem 1rem 0.5rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+			background-image: url("top-banner-11.png");
+			background-size: 100%;
+			background-repeat: no-repeat;
+			user-select:none;
+			animation:fly-in-from-left .5s 1s ease both;
+			transform-origin:top left;
+			-webkit-user-select:none;
+			-webkit-animation:fly-in-from-left .5s 1s ease both;
+			-webkit-transform-origin:top left;
 		}
 
 		.card {
-		  padding:1rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1.5rem 1.5rem;
-		  border-radius:1px;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
+			padding:1rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+			user-select:none;
+			animation:fly-in-from-left .5s 1s ease both;
+			transform-origin:top left;
+			-webkit-user-select:none;
+			-webkit-animation:fly-in-from-left .5s 1s ease both;
+			-webkit-transform-origin:top left;
 		}
+
 		.card:nth-child(even){
-		  animation-name:fly-in-from-right;
-		  animation-delay:1.1s;
-		 transform-origin:top right;
+			animation-name:fly-in-from-right;
+			animation-delay:1.1s;
+			transform-origin:top right;
+			-webkit-animation-name:fly-in-from-right;
+			-webkit-animation-delay:1.1s;
+			-webkit-transform-origin:top right;
 		}
 
 		@keyframes fly-in-from-left {
-		  from {
-		    transform:translateY(15rem) rotate(15deg);
-		    opacity:0;
-		  }
+			from {
+				transform:translateY(15rem) rotate(15deg);
+				opacity:0;
+			}
 		}
 
 		@keyframes fly-in-from-right {
-		  from {
-		    transform:translateY(15rem) rotate(-15deg);
-		    opacity:0;
-		  }
+			from {
+				transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
+			}
+		}
+
+		@-webkit-keyframes fly-in-from-left {
+			from {
+				-webkit-transform:translateY(15rem) rotate(15deg);
+				opacity:0;
+			}
+		}
+
+		@-webkit-keyframes fly-in-from-right {
+			from {
+				-webkit-transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
+			}
 		}
 
 		.card:after {
-		  position:absolute;
-		  font-size:.9rem;
-		  top:1.5rem;
-		  right:1rem;
-		  border:thin solid gray;
-		  color:gray;
-		  width:1rem;
-		  line-height:1rem;
-		  text-align:center;
-		  border-radius:50%;
-		  pointer-events:none;
+			position:absolute;
+			font-size:.9rem;
+			top:1.5rem;
+			right:1rem;
+			border:thin solid gray;
+			color:gray;
+			width:1rem;
+			line-height:1rem;
+			text-align:center;
+			border-radius:50%;
+			pointer-events:none;
 		}
 
 		h1 {
-		  font-size:2rem;
-		  font-weight:200;
-		  margin-top:11px;
+			font-size:2rem;
+			font-weight:200;
+			margin-top:11px;
 		}
-		  strong {
-		    font-weight:500;
-		    color:#ff9f33;
+		strong {
+			font-weight:500;
+			color:#ff9f33;
 		  }
 
 		h2 {
-		  font-size:1.25rem;
-		  color:#ff9f33;
-		  font-weight:400;
-		  margin-top:0px;
+			font-size:1.25rem;
+			color:#ff9f33;
+			font-weight:400;
+			margin-top:0px;
 		}
 
     </style>
