--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -10,100 +10,132 @@
   <link rel="stylesheet" href="css/owl.theme.default.css" />
   <link rel="stylesheet" href="styles.css" />
 
-  <style type="text/css">
+    <style>
+        .photo {
+			margin: 10px;
+        }
+        body {
+			background-position: top left;
+			background-repeat: no-repeat;
+			background-size: 100%;
+			background-color: #efeff4
+        }
+		canvas{
+			width: 100% !important;
+			max-width: 320px;
+			height: 100% !important;
+		}
 
-  body {
-      background-position: top left;
-      background-repeat: no-repeat;
-      background-size: 100%;
-	    background-color: #efeff4
-  }
+		header {
+			position:absolute;
+			z-index:0;
+			top:0; left:0; right:0;
+			height:10rem;
+			transition:transform .5s, opacity .3s;
+			-webkit-transition:transform .5s, opacity .3s;
+			background-size:cover;
+		}
 
-	canvas{
-	  width: 100% !important;
-      max-width: 320px;
-      height: 100% !important;
-	}
-	header {
-	  position:absolute;
-	  z-index:0;
-	  top:0; left:0; right:0;
-	  height:10rem;
-	  transition:transform .5s, opacity .3s;
-	  background-size:cover;
-	}
-	.topcard {
-	  padding:0.5rem 1rem;
-	  box-shadow:0 1px 2px #aaa;
-	  background:white;
-	  margin: 1.5rem 1.5rem;
-	  border-radius:1px;
-	  user-select:none;
-	  animation:fly-in-from-left .5s 1s ease both;
-	  transform-origin:top left;
-	}
-	.card {
-	  padding:1rem 1rem;
-	  box-shadow:0 1px 2px #aaa;
-	  background:white;
-	  margin: 1.5rem 1.5rem;
-	  border-radius:1px;
-	  user-select:none;
-	  animation:fly-in-from-left .5s 1s ease both;
-	  transform-origin:top left;
-	}
-	.card:nth-child(even){
-	  animation-name:fly-in-from-right;
-	  animation-delay:1.1s;
-	 transform-origin:top right;
-	}
+		.topcard {
+			padding:1rem 1rem 0.5rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+			background-size: 100%;
+			background-repeat: no-repeat;
+			user-select:none;
+			animation:fly-in-from-left .5s 1s ease both;
+			transform-origin:top left;
+			-webkit-user-select:none;
+			-webkit-animation:fly-in-from-left .5s 1s ease both;
+			-webkit-transform-origin:top left;
+		}
 
-	@keyframes fly-in-from-left {
-	  from {
-	    transform:translateY(15rem) rotate(15deg);
-	    opacity:0;
-	  }
-	}
+		.card {
+			padding:1rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+			user-select:none;
+			animation:fly-in-from-left .5s 1s ease both;
+			transform-origin:top left;
+			-webkit-user-select:none;
+			-webkit-animation:fly-in-from-left .5s 1s ease both;
+			-webkit-transform-origin:top left;
+		}
 
-	@keyframes fly-in-from-right {
-	  from {
-	    transform:translateY(15rem) rotate(-15deg);
-	    opacity:0;
-	  }
-	}
+		.card:nth-child(even){
+			animation-name:fly-in-from-right;
+			animation-delay:1.1s;
+			transform-origin:top right;
+			-webkit-animation-name:fly-in-from-right;
+			-webkit-animation-delay:1.1s;
+			-webkit-transform-origin:top right;
+		}
 
-	.card:after {
-	  position:absolute;
-	  font-size:.9rem;
-	  top:1.5rem;
-	  right:1rem;
-	  border:thin solid gray;
-	  color:gray;
-	  width:1rem;
-	  line-height:1rem;
-	  text-align:center;
-	  border-radius:50%;
-	  pointer-events:none;
-	}
+		@keyframes fly-in-from-left {
+			from {
+				transform:translateY(15rem) rotate(15deg);
+				opacity:0;
+			}
+		}
 
-	h1 {
-	  font-size:2rem;
-	  font-weight:200;
-	  margin-top:11px;
-	}
-	  strong {
-	    font-weight:500;
-	    color:#ff9f33;
-	  }
+		@keyframes fly-in-from-right {
+			from {
+				transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
+			}
+		}
 
-	h2 {
-	  font-size:1.25rem;
-	  color:#ff9f33;
-	  font-weight:400;
-	  margin-top:-10px;
-	}
+		@-webkit-keyframes fly-in-from-left {
+			from {
+				-webkit-transform:translateY(15rem) rotate(15deg);
+				opacity:0;
+			}
+		}
 
-  </style>
+		@-webkit-keyframes fly-in-from-right {
+			from {
+				-webkit-transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
+			}
+		}
+
+		.card:after {
+			position:absolute;
+			font-size:.9rem;
+			top:1.5rem;
+			right:1rem;
+			border:thin solid gray;
+			color:gray;
+			width:1rem;
+			line-height:1rem;
+			text-align:center;
+			border-radius:50%;
+			pointer-events:none;
+		}
+
+		h1 {
+			font-size:2rem;
+			font-weight:200;
+			margin-top:1rem;
+			margin-bottom:0rem;
+		}
+		strong {
+			font-weight:500;
+			color:#ff9f33;
+		  }
+
+		h2 {
+			font-size:1.25rem;
+			color:#ff9f33;
+			font-weight:400;
+			margin-top:0px;
+		}
+
+    </style>
 
 </head>
 <body>
@@ -116,7 +148,7 @@
     	<div class="owl-item">
 			<section class="topcard">
 				<p style="font-size: 14px;">We used statistical tools to analyze responses from other negotiators who have taken this test.  In order to make group comparisons, we "normalized" the data. That is, we compared each person's response to the average that we received in our pre-launch survey.</p><br>
-				<canvas id="canvas"></canvas>
+				<canvas id="canvas" width="400" height="225"></canvas>
 			</section>
 			<section class="card">
           		<div class="row">
@@ -132,7 +164,7 @@
    		<div class="owl-item">
 			<section class="topcard">
 				<p style="font-size: 14px;">We found five basic types, each one with a different balance of relative strengths. Some people were closely identified with a particular style, while others were near the boundary between one group and another. In your own dealings, you've likely encountered each one of these types.</p>
-				<canvas id="canvas2"></canvas>
+				<canvas id="canvas2" width="400" height="225"></canvas>
 			</section>
 			<section class="card">
           		<div class="row">
@@ -149,7 +181,7 @@
 			<section class="topcard">
 				<h1>Empathetic Value-Creators</h1> 
 				<h2>30 percent of respondents</h2>
-				<canvas id="canvas3"></canvas>
+				<canvas id="canvas3" width="400" height="225"></canvas>
 				<p>These people have above average confidence about understanding the true needs of their counterparts. They also believe they are good at spotting problem-solving opportunities.</p>
       			<p>On the other hand, they have less confidence about asserting their own interests and maximizing their share of the resulting value.</p>
 			</section>
@@ -159,7 +191,7 @@
 			<section class="topcard">
 				<h1>Assertive Value-Claimers</h1> 
 				<h2>10 percent of respondents</h2>
-				<canvas id="canvas4"></canvas>
+				<canvas id="canvas4" width="400" height="225"></canvas>
 				<p>These people are confident about their ability to advocate their own interests. As a result, they believe that they are able to capture a larger slice of the pie (though there may be less total value to win).</p>
       			<p>This profile is the mirror image of the Empathetic Value-Creators, as confidence about self-advocacy is offset by less assurance about relating to others.</p>
 			</section>
@@ -169,7 +201,7 @@
 			<section class="topcard">
 				<h1>Assertive Value-Creators</h1> 
 				<h2>15 percent of respondents</h2>
-				<canvas id="canvas5"></canvas>
+				<canvas id="canvas5" width="400" height="225"></canvas>
 				<p>Like Assertive Value-Claimers, these people are just as confident about their ability to advocate for themselves, but they are less certain about the value they obtain.</p>
       			<p>In reality some of them may perform very well, but as psychological "maximizers," no matter how much they get, they tend worry that they should have claimed an even a bigger share of the pie.</p>
 			</section>
@@ -179,7 +211,7 @@
 			<section class="topcard">
 				<h1>Relational Negotiators</h1> 
 				<h2>25 percent of respondents</h2>
-				<canvas id="canvas6"></canvas>
+				<canvas id="canvas6" width="400" height="225"></canvas>
 				<p>These people rated themselves strongest at self-advocacy and empathy. Maybe that self-assessment is accurate, though it raises the question of why, given superior relational skills, they don't do better at either creating or claiming value.</p>
 			</section>
       	</div>
@@ -188,7 +220,7 @@
 			<section class="topcard">
 				<h1>Outcome-Focused Negotiators</h1> 
 				<h2>20 percent of respondents</h2>
-				<canvas id="canvas7"></canvas>
+				<canvas id="canvas7" width="400" height="225"></canvas>
 				<p>These people rated themselves strongest on both ends of the outcome scale. They may be correct, though it raises a question of how it's possible to attain good results in spite of relational skills that are not as strong.</p>
 			</section>
 		</div>
@@ -386,7 +418,7 @@
 	window.onload = function(){
 		var ctx = document.getElementById("canvas").getContext("2d");
 		window.myRadarChart = new Chart(ctx).Radar(radarChartData, {
-			responsive: false,
+			responsive: true,
 			maintainAspectRatio: true,
 			showScale: true,
 			scaleShowLine : false,
@@ -400,12 +432,13 @@
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
 		    scaleStartValue: 0,
-		    showTooltips: false
+		    showTooltips: false,
+		    animationCount: 0
 		});
 		var ctx2 = document.getElementById("canvas2").getContext("2d");
 		window.myRadarChart = new Chart(ctx2).Radar(radarChartData2, {
-			responsive: false,
-			maintainAspectRatio: false,
+			responsive: true,
+			maintainAspectRatio: true,
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
@@ -417,12 +450,13 @@
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
 		    scaleStartValue: 0,
-		    showTooltips: false
+		    showTooltips: false,
+		    animationCount: 0
 		});
 		var ctx3 = document.getElementById("canvas3").getContext("2d");
 		window.myRadarChart = new Chart(ctx3).Radar(radarChartData3, {
-			responsive: false,
-			maintainAspectRatio: false,
+			responsive: true,
+			maintainAspectRatio: true,
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
@@ -434,12 +468,13 @@
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
 		    scaleStartValue: 0,
-		    showTooltips: false
+		    showTooltips: false,
+		    animationCount: 0
 		});
 		var ctx4 = document.getElementById("canvas4").getContext("2d");
 		window.myRadarChart = new Chart(ctx4).Radar(radarChartData4, {
-			responsive: false,
-			maintainAspectRatio: false,
+			responsive: true,
+			maintainAspectRatio: true,
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
@@ -451,12 +486,13 @@
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
 		    scaleStartValue: 0,
-		    showTooltips: false
+		    showTooltips: false,
+		    animationCount: 0
 		});
 		var ctx5 = document.getElementById("canvas5").getContext("2d");
 		window.myRadarChart = new Chart(ctx5).Radar(radarChartData5, {
-			responsive: false,
-			maintainAspectRatio: false,
+			responsive: true,
+			maintainAspectRatio: true,
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
@@ -468,12 +504,13 @@
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
 		    scaleStartValue: 0,
-		    showTooltips: false
+		    showTooltips: false,
+		    animationCount: 0
 		});
 		var ctx6 = document.getElementById("canvas6").getContext("2d");
 		window.myRadarChart = new Chart(ctx6).Radar(radarChartData6, {
-			responsive: false,
-			maintainAspectRatio: false,
+			responsive: true,
+			maintainAspectRatio: true,
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
@@ -485,12 +522,13 @@
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
 		    scaleStartValue: 0,
-		    showTooltips: false
+		    showTooltips: false,
+		    animationCount: 0
 		});
 		var ctx7 = document.getElementById("canvas7").getContext("2d");
 		window.myRadarChart = new Chart(ctx7).Radar(radarChartData7, {
-			responsive: false,
-			maintainAspectRatio: false,
+			responsive: true,
+			maintainAspectRatio: true,
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
@@ -502,7 +540,8 @@
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
 		    scaleStartValue: 0,
-		    showTooltips: false
+		    showTooltips: false,
+		    animationCount: 0
 		});
 	}
 
