--- a/Negotiation3/reports/scorecard-profile.html
+++ b/Negotiation3/reports/scorecard-profile.html
@@ -5,146 +5,199 @@
 	<link rel="stylesheet" href="css/style.css" />
     <style>
         .photo {
-            margin: 10px;
+			margin: 10px;
         }
         body {
-            background-position: top left;
-            background-repeat: no-repeat;
-            background-size: 100%;
-		    background-color: #efeff4
+			background-position: top left;
+			background-repeat: no-repeat;
+			background-size: 100%;
+			background-color: #efeff4
         }
-			canvas{
-			  width: 100% !important;
-		      max-width: 280px;
-		      height: 100% !important;
-			}
+		canvas{
+			width: 100% !important;
+			max-width: 280px;
+			height: 100% !important;
+		}
 
-			.legend {
-			    width: 15em;
-				  border:thin solid gray;
-				  border-radius:3px;
-				  margin:0.5rem auto;
+		.legend {
+			width: 15em;
+			border:thin solid gray;
+			border-radius:3px;
+			margin:0.5rem auto;
+		}
 
-			}
+		.legend .title {
+			display: block;
+			margin: 0.5em;
+			border-width: 0 0 0 1em;
+			padding: 0 0.3em;
+			font-size: 11px;
+			font-weight: 300;
+			color: gray;
+		}
 
-			.legend .title {
-			    display: block;
-			    margin: 0.5em;
-			    border-width: 0 0 0 1em;
-			    padding: 0 0.3em;
-				font-size: 11px;
-				font-weight: 300;
-				color: gray;
-			}
+		header {
+			position:absolute;
+			z-index:0;
+			top:0; left:0; right:0;
+			height:10rem;
+			transition:transform .5s, opacity .3s;
+			-webkit-transition:transform .5s, opacity .3s;
+			background-size:cover;
+		}
 
-			header {
-			  position:absolute;
-			  z-index:0;
-			  top:0; left:0; right:0;
-			  height:10rem;
-			  transition:transform .5s, opacity .3s;
-			  background-size:cover;
-			}
+		.topcard {
+			padding:1rem 1rem 0.5rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+			background-image: url("top-banner-11.png");
+			background-size: 100%;
+			background-repeat: no-repeat;
+			user-select:none;
+			animation:fly-in-from-left .5s 1s ease both;
+			transform-origin:top left;
+			-webkit-user-select:none;
+			-webkit-animation:fly-in-from-left .5s 1s ease both;
+			-webkit-transform-origin:top left;
+		}
 
-			.topcard {
-			  padding:1rem 1rem 0.5rem 1rem;
-			  box-shadow:0 1px 2px #aaa;
-			  background:white;
-			  margin: 1.5rem 1.5rem;
-			  border-radius:1px;
-			  background-image: url("top-banner-11.png");
-			  background-repeat: no-repeat;
-	   		  background-size: 100%;
-			  user-select:none;
-			  animation:fly-in-from-left .5s 1s ease both;
-			  transform-origin:top left;
-			}
-			.card {
-			  padding:1rem 1rem;
-			  box-shadow:0 1px 2px #aaa;
-			  background:white;
-			  margin: 1.5rem 1.5rem;
-			  border-radius:1px;
-			  user-select:none;
-			  animation:fly-in-from-left .5s 1s ease both;
-			  transform-origin:top left;
-			}
-			.card:nth-child(even){
-			  animation-name:fly-in-from-right;
-			  animation-delay:1.1s;
-			 transform-origin:top right;
-			}
+		.card {
+			padding:1rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+			user-select:none;
+			animation:fly-in-from-left .5s 1s ease both;
+			transform-origin:top left;
+			-webkit-user-select:none;
+			-webkit-animation:fly-in-from-left .5s 1s ease both;
+			-webkit-transform-origin:top left;
+		}
 
-			@keyframes fly-in-from-left {
-			  from {
-			    transform:translateY(15rem) rotate(15deg);
-			    opacity:0;
-			  }
-			}
+		.card:nth-child(even){
+			animation-name:fly-in-from-right;
+			animation-delay:1.1s;
+			transform-origin:top right;
+			-webkit-animation-name:fly-in-from-right;
+			-webkit-animation-delay:1.1s;
+			-webkit-transform-origin:top right;
+		}
 
-			@keyframes fly-in-from-right {
-			  from {
-			    transform:translateY(15rem) rotate(-15deg);
-			    opacity:0;
-			  }
+		@keyframes fly-in-from-left {
+			from {
+				transform:translateY(15rem) rotate(15deg);
+				opacity:0;
 			}
+		}
 
-			.card:after {
-			  position:absolute;
-			  font-size:.9rem;
-			  top:1.5rem;
-			  right:1rem;
-			  border:thin solid gray;
-			  color:gray;
-			  width:1rem;
-			  line-height:1rem;
-			  text-align:center;
-			  border-radius:50%;
-			  pointer-events:none;
+		@keyframes fly-in-from-right {
+			from {
+				transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
 			}
+		}
 
-			h1 {
-			  font-size:2rem;
-			  font-weight:200;
-			  margin-top:11px;
+		@-webkit-keyframes fly-in-from-left {
+			from {
+				-webkit-transform:translateY(15rem) rotate(15deg);
+				opacity:0;
 			}
-			  strong {
-			    font-weight:500;
-			    color:#ff9f33;
-			  }
-			h2 {
-			  font-size:1.25rem;
-			  color:#ff9f33;
-			  font-weight:400;
-			  margin-top:0px;
+		}
+
+		@-webkit-keyframes fly-in-from-right {
+			from {
+				-webkit-transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
 			}
+		}
+
+		.card:after {
+			position:absolute;
+			font-size:.9rem;
+			top:1.5rem;
+			right:1rem;
+			border:thin solid gray;
+			color:gray;
+			width:1rem;
+			line-height:1rem;
+			text-align:center;
+			border-radius:50%;
+			pointer-events:none;
+		}
+
+		h1 {
+			font-size:2rem;
+			font-weight:200;
+			margin-top:11px;
+		}
+		strong {
+			font-weight:500;
+			color:#ff9f33;
+		  }
+
+		h2 {
+			font-size:1.25rem;
+			color:#ff9f33;
+			font-weight:400;
+			margin-top:0px;
+		}
+
     </style>
 
 </head>
 <body>
 	<section class="card">
-		<canvas id="canvas" height="200" width="280"></canvas>
+		<canvas id="canvas" width="400" height="250" style="margin: 0px 0px 0px -10px"></canvas>
 		<div id="radarLegend"></div>
 	</section>
 	
 	<section class="card">
 		<p style="font-size: 14px;">Sometimes your scorecard for a particular negotiation will closely match your self-assessment profile. That shouldn't be surprising, since your profile reflects your general tendencies. But other times it may look very different. Here's why:</p>
-
-		<ol style="margin: 10px 0px 10px -20px;font-size: 14px;">
-			<li>You may be more effective negotiating with certain types of people than with others.</li><br>
-			<li>It may also depend on the situation. Perhaps you're stronger negotiating on behalf of your organization than advocating for yourself.</li><br>
-			<li>Finally, these scorecard questions are different from those in the self-assessment. Here you were free to rate yourself on each skill independently without making tradeoffs for the other items.</li>
-		</ol>
-		
+	</section>
+	
+	<section class="card">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span style="font-size: 32px; color:#ff9f33">1</span>
+			</div>
+			<div class="col-xs-10">
+				<p style="font-size: 14px;">You may be more effective negotiating with certain types of people than with others</p>
+			</div>
+		</div>
 	</section>
 
+	<section class="card">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span style="font-size: 32px; color:#ff9f33">2</span>
+			</div>
+			<div class="col-xs-10">
+				<p style="font-size: 14px;">It may also depend on the situation. Perhaps you're stronger negotiating on behalf of your organization than advocating for yourself.</p>
+			</div>
+		</div>
+	</section>
+
+	<section class="card">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span style="font-size: 32px; color:#ff9f33">3</span>
+			</div>
+			<div class="col-xs-10">
+				<p style="font-size: 14px;">Finally, these scorecard questions are different from those in the self-assessment. Here you were free to rate yourself on each skill independently without making tradeoffs for the other items.</p>
+			</div>
+		</div>
+	</section>
+	
 	<section class="card">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe030;" style="font-size: 32px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-				<p>Take a moment to review your answers, plus your scorecard profile, and reflect more broadly about how this negotiation unfolded. When you're done, tap Back above.</p>
+				<p>Take a moment to review your answers, plus your scorecard profile, and reflect more broadly about how this negotiation unfolded. When you're done, tap <strong>Back</strong> above.</p>
 			</div>
 		</div>
 	</section>
@@ -193,20 +246,24 @@
 
 		var ctx = document.getElementById("canvas").getContext("2d");
 		new Chart(ctx).Radar(radarChartData, {
-			responsive: false,
+			responsive: true,
 			maintainAspectRatio: true,
+			legend:true,
 			showScale: true,
 			scaleShowLine : false,
 			scaleShowLabels : false,
 			pointLabelFontSize : 12,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
-		    animationSteps: 100,
+		    animationSteps: 120,
+		    animationByDataset: true,
 		    scaleOverride: true,
+		    animationByDataset: true,
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
 		    scaleStartValue: 0,
-		    showTooltips: false		
+		    showTooltips: false,
+		    animationCount: 0	
 		});
 
 	    legend(document.getElementById("radarLegend"), radarChartData);
