--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -6,122 +6,157 @@
     <link rel="stylesheet" href="styles.css" />
     <style>
         .photo {
-            margin: 10px;
+			margin: 10px;
         }
+        
         body {
-            background-position: top left;
-            background-repeat: no-repeat;
-            background-size: 100%;
-		    background-color: #efeff4;
-            position: relative; /* For scrollyspy */
-
+			background-position: top left;
+			background-repeat: no-repeat;
+			background-size: 100%;
+			background-color: #efeff4;
+			position: relative; /* For scrollyspy */
         }
-		.list-group-item {
-		  position: relative;
-		  display: block;
-		  font-size: 16px;
-		  text-align: center;
-		  padding:1rem 1.5rem;
-		  margin-bottom: -1px;
-		  background-color: #ffffff;
-		  border-top: 1px solid #dddddd;
-		  border-bottom: 1px solid #dddddd;
-		}
-		.list-group-item:last-child {
-		  margin-bottom: 0;
-		  border-bottom-right-radius: 0px;
-		  border-bottom-left-radius: 0px;
-		  border-bottom: 0px solid #dddddd;
-		  padding:1rem 1rem 0rem 1rem;
-		}
 		
-		.popover{
-		    width:200px;
+		.list-group-item {
+			position: relative;
+			display: block;
+			font-size: 16px;
+			text-align: center;
+			padding:1rem 1.5rem;
+			margin-bottom: -1px;
+			background-color: #ffffff;
+			border-top: 1px solid #dddddd;
+			border-bottom: 1px solid #dddddd;
 		}
+
+		.list-group-item:last-child {
+			margin-bottom: 0;
+			border-bottom-right-radius: 0px;
+			border-bottom-left-radius: 0px;
+			border-bottom: 0px solid #dddddd;
+			padding:1rem 1rem 0rem 1rem;
+		}
+
+		.popover{
+			width:200px;
+		}
+
 		canvas{
-		  width: 100% !important;
-	      max-width: 280px;
-	      height: 100% !important;
+			width: 100% !important;
+			max-width: 280px;
+			height: 100% !important;
 		}
 
 		header {
-		  position:absolute;
-		  z-index:0;
-		  top:0; left:0; right:0;
-		  height:10rem;
-		  transition:transform .5s, opacity .3s;
-		  background-size:cover;
+			position:absolute;
+			z-index:0;
+			top:0; left:0; right:0;
+			height:10rem;
+			transition:transform .5s, opacity .3s;
+			-webkit-transition:transform .5s, opacity .3s;
+			background-size:cover;
 		}
+
+		.panel-warning {
+			border-color: #fff;
+			box-shadow:0 1px 2px #aaa;
+		}
+
 		.topcard {
-		  padding:1rem 1rem 0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1.5rem 1.5rem;
-		  border-radius:1px;
-		  background-image: url("top-banner-7.png");
-		  background-repeat: no-repeat;
-   		  background-size: 100%;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
+			padding:1rem 1rem 0.5rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+			background-image: url("top-banner-7.png");
+			background-size: 100%;
+			background-repeat: no-repeat;
+			user-select:none;
+			animation:fly-in-from-left .5s 1s ease both;
+			transform-origin:top left;
+			-webkit-user-select:none;
+			-webkit-animation:fly-in-from-left .5s 1s ease both;
+			-webkit-transform-origin:top left;
 		}
 
 		.card {
-		  padding:1rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1.5rem 1.5rem;
-		  border-radius:1px;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
+			padding:1rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+			user-select:none;
+			animation:fly-in-from-left .5s 1s ease both;
+			transform-origin:top left;
+			-webkit-user-select:none;
+			-webkit-animation:fly-in-from-left .5s 1s ease both;
+			-webkit-transform-origin:top left;
 		}
+
 		.card:nth-child(even){
-		  animation-name:fly-in-from-right;
-		  animation-delay:1.1s;
-		 transform-origin:top right;
+			animation-name:fly-in-from-right;
+			animation-delay:1.1s;
+			transform-origin:top right;
+			-webkit-animation-name:fly-in-from-right;
+			-webkit-animation-delay:1.1s;
+			-webkit-transform-origin:top right;
 		}
 
 		@keyframes fly-in-from-left {
-		  from {
-		    transform:translateY(15rem) rotate(15deg);
-		    opacity:0;
-		  }
+			from {
+				transform:translateY(15rem) rotate(15deg);
+				opacity:0;
+			}
 		}
 
 		@keyframes fly-in-from-right {
-		  from {
-		    transform:translateY(15rem) rotate(-15deg);
-		    opacity:0;
-		  }
+			from {
+				transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
+			}
+		}
+
+		@-webkit-keyframes fly-in-from-left {
+			from {
+				-webkit-transform:translateY(15rem) rotate(15deg);
+				opacity:0;
+			}
+		}
+
+		@-webkit-keyframes fly-in-from-right {
+			from {
+				-webkit-transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
+			}
 		}
 
 		.card:after {
-		  position:absolute;
-		  font-size:.9rem;
-		  top:1.5rem;
-		  right:1rem;
-		  border:thin solid gray;
-		  color:gray;
-		  width:1rem;
-		  line-height:1rem;
-		  text-align:center;
-		  border-radius:50%;
-		  pointer-events:none;
+			position:absolute;
+			font-size:.9rem;
+			top:1.5rem;
+			right:1rem;
+			border:thin solid gray;
+			color:gray;
+			width:1rem;
+			line-height:1rem;
+			text-align:center;
+			border-radius:50%;
+			pointer-events:none;
 		}
 
 		h1 {
-		  font-size:2rem;
-		  font-weight:200;
-		  margin-top:11px;
+			font-size:2rem;
+			font-weight:200;
+			margin-top:11px;
 		}
+
 		h2 {
-		  font-size:1.25rem;
-		  color:#ff9f33;
-		  font-weight:400;
-		  margin-top:0px;
+			font-size:1.25rem;
+			color:#ff9f33;
+			font-weight:400;
+			margin-top:0px;
 		}
-		
+
     </style>
 </head>
 <body>
@@ -139,7 +174,7 @@
     		<p style="font-size:14px">Ideally, of course, you'd like to excel at each of the four skills: asserting your interests, understanding others, creating value, and claiming your share. But each of them involves a tradeoff. By being more open, you may encourage a cooperative response. But you could also risk exploitation, depending on whom you're dealing with. Likewise, firmly asserting your interests may win you a larger share, but if the other party also digs in, it could be harder for both of you to find creative solutions.</p>
 		</section>
 		<section class="card">
-    		<p style="font-size: 16px; color:#ff9f33"><strong>Here are some tips for improving your effectiveness</strong></p>
+    		<p style="font-size: 16px; color:#ff9f33"><strong>Tap a skill below to reveal some tips for improving your effectiveness</strong></p>
 		</section>
    	</div>
 	<div class="panel-group" id="accordion" style="margin: 1.5rem 1.5rem;">
@@ -161,7 +196,7 @@
 	    </div>
 	  </div>
 	  <div class="panel panel-warning">
-	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
+	    <div class="panel-heading" style="background-color: #445ae1;border-color: #445ae1;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
 	          <strong><span data-icon="&#xe0b4;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Assert your interest</strong>
@@ -178,7 +213,7 @@
 	    </div>
 	  </div>
 	  <div class="panel panel-warning">
-	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
+	    <div class="panel-heading" style="background-color: #2ee478;border-color: #2ee478;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
 	          <strong><span data-icon="&#xe313;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Maximize your share</strong>
@@ -195,7 +230,7 @@
 	    </div>
 	  </div>
 	  <div class="panel panel-warning">
-	    <div class="panel-heading" style="background-color: #ff9f33; border-color: #ff9f33;">
+	    <div class="panel-heading" style="background-color: #df5353; border-color: #df5353;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
 	          <strong><span data-icon="&#xe14e;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Create value</strong>
