--- a/Negotiation3/reports/test1.html
+++ b/Negotiation3/reports/test1.html
@@ -3,103 +3,100 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <style>
+     <style>
         .photo {
-            margin: 10px;
+			margin: 10px;
         }
         body {
-            background-position: top left;
-            background-repeat: no-repeat;
-            background-size: 100%;
-
+			background-position: top left;
+			background-repeat: no-repeat;
+			background-size: 100%;
+			background-color: #fff
         }
-			canvas{
-			  width: 100% !important;
-		      max-width: 280px;
-		      height: 100% !important;
-			}
+		canvas{
+			width: 100% !important;
+			max-width: 320px;
+			height: 100% !important;
+		}
 
-			header {
-			  position:absolute;
-			  z-index:0;
-			  top:0; left:0; right:0;
-			  height:10rem;
-			  transition:transform .5s, opacity .3s;
-			  background-size:cover;
-			}
+		header {
+			position:absolute;
+			z-index:0;
+			top:0; left:0; right:0;
+			height:10rem;
+			background-size:cover;
+		}
 
-			.topcard {
-			  padding:1rem 1rem 0.5rem 1rem;
-			  box-shadow:0 1px 2px #aaa;
-			  background:white;
-			  margin: 1rem 1.5rem;
-			  border-radius:1px;
-			  background-image: url("top-banner-4.png");
-			  background-repeat: no-repeat;
-	   		  background-size: 100%;
-			  user-select:none;
-			  animation:fly-in-from-left .5s 1s ease both;
-			  transform-origin:top left;
-			}
-			.card {
-			  padding:0.5rem 1rem;
-			  box-shadow:0 1px 2px #aaa;
-			  background:white;
-			  margin: 1rem 1.5rem;
-			  border-radius:1px;
-			  user-select:none;
-			  animation:fly-in-from-left .5s 1s ease both;
-			  transform-origin:top left;
-			}
-			.card:nth-child(even){
-			  animation-name:fly-in-from-right;
-			  animation-delay:1.1s;
-			 transform-origin:top right;
-			}
+		.topcard {
+			padding:1rem 1rem 0.5rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1rem 1.5rem;
+			border-radius:1px;
+			background-size: 100%;
+			background-repeat: no-repeat;
+			background-image: url("top-banner-4.png");
+		}
 
-			@keyframes fly-in-from-left {
-			  from {
-			    transform:translateY(15rem) rotate(15deg);
-			    opacity:0;
-			  }
-			}
+		.card {
+			padding:0.5rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+		}
 
-			@keyframes fly-in-from-right {
-			  from {
-			    transform:translateY(15rem) rotate(-15deg);
-			    opacity:0;
-			  }
-			}
+		.card:nth-child(even){
+			animation-name:fly-in-from-right;
+			animation-delay:1.1s;
+			transform-origin:top right;
+		}
 
-			.card:after {
-			  position:absolute;
-			  font-size:.9rem;
-			  top:1.5rem;
-			  right:1rem;
-			  border:thin solid gray;
-			  color:gray;
-			  width:1rem;
-			  line-height:1rem;
-			  text-align:center;
-			  border-radius:50%;
-			  pointer-events:none;
+		@keyframes fly-in-from-left {
+			from {
+				transform:translateY(15rem) rotate(15deg);
+				opacity:0;
 			}
+		}
 
-			h1 {
-			  font-size:2rem;
-			  font-weight:200;
-			  margin-top:11px;
+		@keyframes fly-in-from-right {
+			from {
+				transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
 			}
-			  strong {
-			    font-weight:500;
-			    color:#ff9f33;
-			  }
-			h2 {
-			  font-size:1.25rem;
-			  color:#ff9f33;
-			  font-weight:400;
-			  margin-top:0px;
-			}
+		}
+
+		.card:after {
+			position:absolute;
+			font-size:.9rem;
+			top:1.5rem;
+			right:1rem;
+			border:thin solid gray;
+			color:gray;
+			width:1rem;
+			line-height:1rem;
+			text-align:center;
+			border-radius:50%;
+			pointer-events:none;
+		}
+
+		h1 {
+			font-size:2rem;
+			font-weight:200;
+			margin-top:1rem;
+		}
+		strong {
+			font-weight:500;
+			color:#ff9f33;
+		  }
+
+		h2 {
+			font-size:1.25rem;
+			color:#ff9f33;
+			font-weight:400;
+			margin-top:0px;
+		}
+
     </style>
 </head>
 <body>
