--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -3,108 +3,151 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-  <style type="text/css">
-  body {
-      background-position: top left;
-      background-repeat: no-repeat;
-      background-size: 100%;
-	    background-color: #efeff4
-  }
+    <style>
+        .photo {
+			margin: 10px;
+        }
+        
+        body {
+			background-position: top left;
+			background-repeat: no-repeat;
+			background-size: 100%;
+			background-color: #efeff4
+        }
+		
+		.legend {
+			width: 15em;
+			border:thin solid gray;
+			border-radius:3px;
+			margin:0.5rem auto;
+		}
 
-.legend {
-    width: 15em;
-	  border:thin solid gray;
-	  border-radius:3px;
-	  margin:0.5rem auto;
-	
-}
+		.legend .title {
+			display: block;
+			margin: 0.5em;
+			border-width: 0 0 0 1em;
+			padding: 0 0.3em;
+			font-size: 11px;
+			font-weight: 300;
+			color: gray;
+		}
 
-.legend .title {
-    display: block;
-    margin: 0.5em;
-    border-width: 0 0 0 1em;
-    padding: 0 0.3em;
-	font-size: 11px;
-	font-weight: 300;
-	color: gray;
-}
-	canvas{
-	  width: 100% !important;
-      max-width: 280px;
-      height: 100% !important;
-	}
+		canvas{
+			width: 100% !important;
+			max-width: 320px;
+			height: 100% !important;
+		}
 
-	header {
-	  position:absolute;
-	  z-index:0;
-	  top:0; left:0; right:0;
-	  height:10rem;
-	  transition:transform .5s, opacity .3s;
-	  background-size:cover;
-	}
+		header {
+			position:absolute;
+			z-index:0;
+			top:0; left:0; right:0;
+			height:10rem;
+			transition:transform .5s, opacity .3s;
+			-webkit-transition:transform .5s, opacity .3s;
+			background-size:cover;
+		}
 
-	.card {
-	  padding:1rem 1rem;
-	  box-shadow:0 1px 2px #aaa;
-	  background:white;
-	  margin: 1.5rem 1.5rem;
-	  border-radius:1px;
-	  user-select:none;
-	  animation:fly-in-from-left .5s 1s ease both;
-	  transform-origin:top left;
-	}
-	.card:nth-child(even){
-	  animation-name:fly-in-from-right;
-	  animation-delay:1.1s;
-	 transform-origin:top right;
-	}
+		.topcard {
+			padding:1rem 1rem 0.5rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+			background-size: 100%;
+			background-repeat: no-repeat;
+			user-select:none;
+			animation:fly-in-from-left .5s 1s ease both;
+			transform-origin:top left;
+			-webkit-user-select:none;
+			-webkit-animation:fly-in-from-left .5s 1s ease both;
+			-webkit-transform-origin:top left;
+		}
 
-	@keyframes fly-in-from-left {
-	  from {
-	    transform:translateY(15rem) rotate(15deg);
-	    opacity:0;
-	  }
-	}
+		.card {
+			padding:1rem 1rem;
+			box-shadow:0 1px 2px #aaa;
+			background:white;
+			margin: 1.5rem 1.5rem;
+			border-radius:1px;
+			user-select:none;
+			animation:fly-in-from-left .5s 1s ease both;
+			transform-origin:top left;
+			-webkit-user-select:none;
+			-webkit-animation:fly-in-from-left .5s 1s ease both;
+			-webkit-transform-origin:top left;
+		}
 
-	@keyframes fly-in-from-right {
-	  from {
-	    transform:translateY(15rem) rotate(-15deg);
-	    opacity:0;
-	  }
-	}
+		.card:nth-child(even){
+			animation-name:fly-in-from-right;
+			animation-delay:1.1s;
+			transform-origin:top right;
+			-webkit-animation-name:fly-in-from-right;
+			-webkit-animation-delay:1.1s;
+			-webkit-transform-origin:top right;
+		}
 
-	.card:after {
-	  position:absolute;
-	  font-size:.9rem;
-	  top:1.5rem;
-	  right:1rem;
-	  border:thin solid gray;
-	  color:gray;
-	  width:1rem;
-	  line-height:1rem;
-	  text-align:center;
-	  border-radius:50%;
-	  pointer-events:none;
-	}
+		@keyframes fly-in-from-left {
+			from {
+				transform:translateY(15rem) rotate(15deg);
+				opacity:0;
+			}
+		}
 
-	h1 {
-	  font-size:2rem;
-	  font-weight:200;
-	  margin-top:11px;
-	}
-	  strong {
-	    font-weight:500;
-	    color:#ff9f33;
-	  }
+		@keyframes fly-in-from-right {
+			from {
+				transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
+			}
+		}
 
-	h2 {
-	  font-size:1.25rem;
-	  color:#ff9f33;
-	  font-weight:400;
-	  margin-top:1rem;
-	}
+		@-webkit-keyframes fly-in-from-left {
+			from {
+				-webkit-transform:translateY(15rem) rotate(15deg);
+				opacity:0;
+			}
+		}
 
-  </style>
+		@-webkit-keyframes fly-in-from-right {
+			from {
+				-webkit-transform:translateY(15rem) rotate(-15deg);
+				opacity:0;
+			}
+		}
+
+		.card:after {
+			position:absolute;
+			font-size:.9rem;
+			top:1.5rem;
+			right:1rem;
+			border:thin solid gray;
+			color:gray;
+			width:1rem;
+			line-height:1rem;
+			text-align:center;
+			border-radius:50%;
+			pointer-events:none;
+		}
+
+		h1 {
+			font-size:2rem;
+			font-weight:200;
+			margin-top:1rem;
+			margin-bottom:0rem;
+		}
+		strong {
+			font-weight:500;
+			color:#ff9f33;
+		  }
+
+		h2 {
+			font-size:1.25rem;
+			color:#ff9f33;
+			font-weight:400;
+			margin-top:1rem;
+		}
+
+    </style>
 
 </head>
 <body>
@@ -114,7 +157,7 @@
 			<p style="font-size:14px">The ratings you entered most closely match those of <strong style="color:#445ae1">%@</strong>. %@ (<i>The group you are the most unlike is that of the <strong style="color:#DF5353">%@</strong></i>.)</p>
 		</section>
 		<section class="card">	
-			<canvas id="canvas"></canvas>
+			<canvas id="canvas" width="400" height="250" style="margin: 0px 0px 0px -10px"></canvas>
 			<div id="radarLegend"></div>
 		</section>
 		<section class="card">
@@ -185,8 +228,8 @@
 
 		var ctx = document.getElementById("canvas").getContext("2d");
 		new Chart(ctx).Radar(radarChartData, {
-			responsive: false,
-			maintainAspectRatio: false,
+			responsive: true,
+			maintainAspectRatio: true,
 			legend:true,
 			showScale: true,
 			scaleShowLine : false,
@@ -194,13 +237,15 @@
 			pointLabelFontSize : 12,
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
-		    animationSteps: 100,
+		    animationSteps: 120,
+		    animationByDataset: true,
 		    scaleOverride: true,
 		    animationByDataset: true,
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
 		    scaleStartValue: 0,
-		    showTooltips: false		
+		    showTooltips: false,
+		    animationCount: 0	
 		});
 
 	    legend(document.getElementById("radarLegend"), radarChartData);
