Updated graph animations

--- a/Negotiation3/reports/overview.html
+++ b/Negotiation3/reports/overview.html
@@ -124,7 +124,8 @@
 			scaleShowLabels : false,
 			pointLabelFontSize : 12,
 			pointLabelFontColor : "gray",
-		    animationSteps: 100,
+		    animationLeftToRight: true,
+		    animationSteps: 120,
 		    scaleOverride: true,
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
