--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -239,6 +239,7 @@
 			pointLabelFontColor : "gray",
 		    animationSteps: 120,
 		    animationByDataset: true,
+		    animationLeftToRight: true,
 		    scaleOverride: true,
 		    animationByDataset: true,
 		    scaleSteps: 2,
