--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -428,6 +428,7 @@
 			pointLabelFontColor : "gray",
 		    animationSteps: 120,
 		    animationByDataset: true,
+		    animationLeftToRight: true,
 		    scaleOverride: true,
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
@@ -446,6 +447,7 @@
 			pointLabelFontColor : "gray",
 		    animationSteps: 120,
 		    animationByDataset: true,
+		    animationLeftToRight: true,
 		    scaleOverride: true,
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
@@ -464,6 +466,7 @@
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 60,
+		    animationLeftToRight: true,
 		    scaleOverride: true,
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
@@ -482,6 +485,7 @@
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 60,
+		    animationLeftToRight: true,
 		    scaleOverride: true,
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
@@ -500,6 +504,7 @@
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 60,
+		    animationLeftToRight: true,
 		    scaleOverride: true,
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
@@ -518,6 +523,7 @@
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 60,
+		    animationLeftToRight: true,
 		    scaleOverride: true,
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
@@ -536,6 +542,7 @@
 			pointLabelFontFamily : "'Helvetica Neue'",
 			pointLabelFontColor : "gray",
 		    animationSteps: 60,
+		    animationLeftToRight: true,
 		    scaleOverride: true,
 		    scaleSteps: 2,
 		    scaleStepWidth: 4,
