--- a/Negotiation3/reports/scorecard-profile.html
+++ b/Negotiation3/reports/scorecard-profile.html
@@ -257,6 +257,7 @@
 			pointLabelFontColor : "gray",
 		    animationSteps: 120,
 		    animationByDataset: true,
+		    animationLeftToRight: true,
 		    scaleOverride: true,
 		    animationByDataset: true,
 		    scaleSteps: 2,
