added new text for reminder of scorecard feature

--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -3,7 +3,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="styles.css" />
     <style>
         .photo {
 			margin: 10px;
@@ -182,7 +181,7 @@
 	    <div class="panel-heading" style="background-color: #ff9f33; border-color: #ff9f33;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-	          <strong><span data-icon="&#xe065;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Understand the other side</strong>
+	          <strong><span data-icon="&#xe049;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Understand the other side</strong>
 	        </a>
 	      </h4>
 	    </div>
@@ -199,7 +198,7 @@
 	    <div class="panel-heading" style="background-color: #445ae1;border-color: #445ae1;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-	          <strong><span data-icon="&#xe0b4;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Assert your interest</strong>
+	          <strong><span data-icon="&#xe021;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Assert your interest</strong>
 	        </a>
 	      </h4>
 	    </div>
@@ -216,7 +215,7 @@
 	    <div class="panel-heading" style="background-color: #2ee478;border-color: #2ee478;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-	          <strong><span data-icon="&#xe313;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Maximize your share</strong>
+	          <strong><span data-icon="&#xe050;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;&nbsp;Maximize your share</strong>
 	        </a>
 	      </h4>
 	    </div>
@@ -233,7 +232,7 @@
 	    <div class="panel-heading" style="background-color: #df5353; border-color: #df5353;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-	          <strong><span data-icon="&#xe14e;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Create value</strong>
+	          <strong><span data-icon="&#xe016;" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;Create value</strong>
 	        </a>
 	      </h4>
 	    </div>
@@ -248,6 +247,17 @@
 	  </div>
 	</div>
 	
+	<section class="card">
+		<div class="row"> 
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe030;" style="font-size: 32px; color:#ff9f33"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
+				<p>You've built a profile and reviewed the Tips. Now put the app to work by completing a Scorecard for your latest negotiation. Tap <strong style="font-weight:500; color: #ff9f33">Back</strong> above and then <strong style="font-weight:500; color: #ff9f33">Home</strong> to get started.</p>
+			</div>
+		</div>
+	</section>
+
 	<div style="height:100px">
 	</div>
 
