--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -184,6 +184,17 @@
 		</div>
 	</section>
 	
+	<section class="card">
+		<div class="row"> 
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe030;" style="font-size: 32px; color:#ff9f33"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
+				<p>If you've already read The Tips, go directly to Step 2 and put the app to work by completing a Scorecard for your latest negotiation. Tap <strong>Back</strong> above and then <strong>Home</strong> to get started.</p>
+			</div>
+		</div>
+	</section>
+
 	<div style="height:100px">
 	</div>
 	
